--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/IsaacPeters/Sony-Camera-Testing/issues"
   },
-  "homepage": "https://github.com/IsaacPeters/Sony-Camera-Testing#readme"
+  "homepage": "https://github.com/IsaacPeters/Sony-Camera-Testing#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "socket.io": "^2.1.0",
+    "sony-camera": "0.0.6"
+  }
 }
