--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "socket.io": "^2.1.0",
-    "sony-camera": "0.0.6"
+    "sony-camera": "0.0.6",
+    "tracker": "0.0.0"
   }
 }
